# cpu-stresser

./: Cargo.toml  Dockerfile  build.rs
proto/: service.proto
src/: main.rs
