[package]
name = "cpu-stresser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
prost = "0.13"
tokio = { version = "1.46.0", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.1"
